allso/front/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: frontend-monitor
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        workload.user.cattle.io/workloadselector: frontend-monitor
    spec:
      containers:
      - name: frontend
        image: az.docker.juxtagene.com/services/juxtagene-frontend-monitor:latest
        imagePullPolicy: Always
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: juxtagene-docker-registry
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
