allso/front/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: monitor
spec:
  type: ClusterIP
  selector:
    workload.user.cattle.io/workloadselector: frontend-olaf-monitor
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
